updated my card

--- a/index.html
+++ b/index.html
@@ -4,16 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Haroub Said</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
   <main class="main">
     <section class="section-1" id="section">
-      <div><img src="./assets/creative-coder.png" alt="profile-picture"></div>
+
+      <h1 class="naam">Haroub Said</h1>
+
+      <p>Leeftijd: 22</p>
+      <p>Woonplaats: Amsterdam</p>
+      <p>Werk: Frontend Developer</p>
+
+      <img src="assets/haroub.jpeg" alt="haroub said">
+
     </section>
-    <section class="section-2" id="section"></section>
-    <section class="section-3" id="section"></section>
+    <section class="section-2" id="section">
+
+
+      <h2>Kwaliteiten</h2>
+
+      <!-- <img src="assets/football-svgrepo-com.svg" alt="haroub said">
+      <img src="assets/car-sports-svgrepo-com.svg" alt="haroub said">
+      <img src="assets/game-console-svgrepo-com.svg" alt="haroub said">
+      <img src="/assets/aeroplane-flight-fly-2-svgrepo-com.svg" alt="aroplane">
+
+       -->
+      <p>Competitief</p>
+
+      <p>Autonoom</p>
+
+      <p>Anticiperend</p>
+
+      <p>Sportief</p>
+
+
+    </section>
+    <section class="section-3" id="section">
+      <h2>Hobby's</h2>
+
+      <img src="assets/football-svgrepo-com.svg" alt="haroub said">
+      <img src="assets/car-sports-svgrepo-com.svg" alt="haroub said">
+      <img src="assets/game-console-svgrepo-com.svg" alt="haroub said">
+      <img src="/assets/aeroplane-flight-fly-2-svgrepo-com.svg" alt="aroplane">
+
+    </section>
   </main>
 </body>
 
