--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
     <section class="section-3" id="section">
       <h2>Hobby's</h2>
 
-      <img src="assets/football-svgrepo-com.svg" alt="haroub said">
+      <img src="assets/football-svgrepo-com.svg"  class="ball" onclick="rotateBall();" alt="haroub said">
       <img src="assets/car-sports-svgrepo-com.svg" alt="haroub said">
       <img src="assets/game-console-svgrepo-com.svg" alt="haroub said">
-      <img src="/assets/aeroplane-flight-fly-2-svgrepo-com.svg" alt="aroplane">
+      <!-- <img src="/assets/aeroplane-flight-fly-2-svgrepo-com.svg" alt="aroplane"> -->
 
     </section>
   </main>
+
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
