remove duplicate id

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main class="main">
-    <section class="section-1" id="section">
+    <section class="section-1">
 
       <h1 class="naam">Haroub Said</h1>
 
@@ -21,7 +21,7 @@
       <img src="assets/haroub.jpeg" alt="haroub said">
 
     </section>
-    <section class="section-2" id="section">
+    <section class="section-2">
 
 
       <h2>Kwaliteiten</h2>
@@ -40,9 +40,9 @@
 
       <p>Sportief</p>
 
-
     </section>
-    <section class="section-3" id="section">
+
+    <section class="section-3">
       <h2>Hobby's</h2>
 
       <img src="assets/football-svgrepo-com.svg"  class="ball" onclick="rotateBall();" alt="haroub said">
